test: 1.12 integration tests